# OpenApiSpec.yml
@@ -44,7 +44,7 @@ paths:
                 password:
                   type: "string"
                   description: "User's password"
-                mfaCode:
+                token:
                   type: "string"
                   minLength: 6
                   maxLength: 6
@@ -421,7 +421,7 @@ paths:
                     enum:
                       - "User"
                       - "Admin"
-  /api/v1/groups/{groupID}/users/{userID}/resend-invitation-email:
+  /groups/{groupID}/users/{userID}/resend-invitation-email:
     post:
       tags:
         - "Groups"
@@ -650,9 +650,9 @@ paths:
             schema:
               type: "object"
               required:
-                - "mfaCode"
+                - "token"
               properties:
-                mfaCode:
+                token:
                   type: "string"
                   minLength: 6
                   maxLength: 6
